--- a/src/index.html
+++ b/src/index.html
@@ -15,16 +15,16 @@
 </head>
 
 <body>
-    <section class="section section__main">
+    <section class="section section__main" id="home">
         <nav>
             <div class="container container__nav d-flex justify-content-between align-items-center">
                 <a class="logo" title="Blueasy" href="#"></a>
                 <ul class="nav">
-                    <li class="nav_item"><a href="#" class="nav_link">Home</a></li>
-                    <li class="nav_item"><a href="#" class="nav_link">Services</a></li>
-                    <li class="nav_item"><a href="#" class="nav_link">Features</a></li>
-                    <li class="nav_item"><a href="#" class="nav_link">Portfolio</a></li>
-                    <li class="nav_item"><a href="#" class="nav_link">Contact</a></li>
+                    <li class="nav_item"><a href="#home" class="nav_link">Home</a></li>
+                    <li class="nav_item"><a href="#services" class="nav_link">Services</a></li>
+                    <li class="nav_item"><a href="#features" class="nav_link">Features</a></li>
+                    <li class="nav_item"><a href="#portfolio" class="nav_link">Portfolio</a></li>
+                    <li class="nav_item"><a href="#contact" class="nav_link">Contact</a></li>
                 </ul>
             </div>
         </nav>
@@ -36,7 +36,7 @@
         </div>
     </section>
 
-    <section class="section section__light-blue section__white">
+    <section class="section section__light-blue section__white" id="services">
         <div class="container">
             <header class="section_header d-flex justify-content-between">
                 <h2>Services</h2>
@@ -96,7 +96,7 @@
         </div>
     </section>
 
-    <section class="section section__light-blue section__white">
+    <section class="section section__light-blue section__white" id="features">
         <div class="container">
             <header class="section_header d-flex justify-content-between">
                 <h2>Twitter</h2>
@@ -113,7 +113,7 @@
         </div>
     </section>
 
-    <section class="section section__who section__white">
+    <section class="section section__who section__white" id="portfolio">
         <div class="container">
             <header class="section_header d-flex justify-content-between">
                 <h2>Who is John Doe?</h2>
@@ -166,7 +166,7 @@
         </div>
     </section>
 
-    <section class="section section__contacts section__white">
+    <section class="section section__contacts section__white" id="contact">
         <div class="container">
             <header class="section_header">
                 <h2>Contacts</h2>
