porfolio section has been added

--- a/src/index.html
+++ b/src/index.html
@@ -96,6 +96,51 @@
         </div>
     </section>
 
+    <section class="section">
+        <div class="container">
+            <header class="section_header d-flex justify-content-between">
+                <h2>Portfolio</h2>
+                <ul class="nav">
+                        <li class="nav_item"><span href="#" class="nav_link">all</span></li>
+                        <li class="nav_item"><span href="#" class="nav_link">panorams</span></li>
+                        <li class="nav_item"><span href="#" class="nav_link">portraits</span></li>
+                        <li class="nav_item"><span href="#" class="nav_link">macro</span></li>
+                        <li class="nav_item"><span href="#" class="nav_link">journal</span></li>
+                    </ul>
+            </header>
+            <main class="section_body">
+                    <div class="row">
+                        <div class="col col-md-3"><div class="art"><img src="images/--portfolio-photo2.jpg" alt="">
+                        <div class="art_overlay"></div>
+                        <span class="icon__plus"><i class="fas fa-plus"></i></span></div></div>
+                        <div class="col col-md-3"><div class="art"><img src="images/--portfolio-photo2.jpg" alt="">
+                        <div class="art_overlay"></div>
+                        <span class="icon__plus"><i class="fas fa-plus"></i></span></div></div>
+                        <div class="col col-md-3"><div class="art"><img src="images/--portfolio-photo2.jpg" alt="">
+                        <div class="art_overlay"></div>
+                        <span class="icon__plus"><i class="fas fa-plus"></i></span></div></div>
+                        <div class="col col-md-3"><div class="art"><img src="images/--portfolio-photo2.jpg" alt="">
+                        <div class="art_overlay"></div>
+                        <span class="icon__plus"><i class="fas fa-plus"></i></span></div></div>
+                    </div>
+                    <div class="row">
+                            <div class="col col-md-3"><div class="art"><img src="images/--portfolio-photo2.jpg" alt="">
+                            <div class="art_overlay"></div>
+                            <span class="icon__plus"><i class="fas fa-plus"></i></span></div></div>
+                            <div class="col col-md-3"><div class="art"><img src="images/--portfolio-photo2.jpg" alt="">
+                            <div class="art_overlay"></div>
+                            <span class="icon__plus"><i class="fas fa-plus"></i></span></div></div>
+                            <div class="col col-md-3"><div class="art"><img src="images/--portfolio-photo2.jpg" alt="">
+                            <div class="art_overlay"></div>
+                            <span class="icon__plus"><i class="fas fa-plus"></i></span></div></div>
+                            <div class="col col-md-3"><div class="art"><img src="images/--portfolio-photo2.jpg" alt="">
+                            <div class="art_overlay"></div>
+                            <span class="icon__plus"><i class="fas fa-plus"></i></span></div></div>
+                        </div>
+            </main>
+        </div>
+    </section>
+
     <section class="section section__light-blue section__white" id="features">
         <div class="container">
             <header class="section_header d-flex justify-content-between">
